--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     {
       "name": "vincent99",
       "email": "vincent@rancher.com"
+    },
+    {
+      "name": "dandreev",
+      "email": "dandreev@virtuozzo.com"
     }
   ],
   "license": "MIT",
-  "homepage": "http://github.com/godaddy/node-openstack-wrapper",
+  "homepage": "http://github.com/virtuozzo/node-openstack-wrapper",
   "keywords": [
     "openstack",
     "keystone",
@@ -30,11 +34,11 @@
     "glance"
   ],
   "bugs": {
-    "url": "http://github.com/godaddy/node-openstack-wrapper/issues"
+    "url": "http://github.com/virtuozzo/node-openstack-wrapper/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/godaddy/node-openstack-wrapper.git"
+    "url": "https://github.com/virtuozzo/node-openstack-wrapper.git"
   },
   "dependencies": {
     "request": "~2",
@@ -46,44 +50,11 @@
   },
   "main": "./index.js",
   "scripts": {
+    "publish": "git push origin --tags && npm run changelog && git push origin",
+    "release:patch": "npm version patch && npm publish",
+    "release:minor": "npm version minor && npm publish",
+    "release:major": "npm version major && npm publish",
+    "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -am \"Updating changelog\"",
     "test": "./node_modules/nodeunit/bin/nodeunit ./test"
-  },
-  "gitHead": "ba2e0d6bdd001448d030f25daf2a7578fc1036d2",
-  "_id": "openstack-wrapper@1.4.6",
-  "_shasum": "68dbe1b045d0cfc813bcd453da442164cf5947b5",
-  "_from": "openstack-wrapper@1.4.6",
-  "_npmVersion": "2.15.8",
-  "_nodeVersion": "4.4.7",
-  "_npmUser": {
-    "name": "bnewby",
-    "email": "brnewby602@gmail.com"
-  },
-  "dist": {
-    "shasum": "68dbe1b045d0cfc813bcd453da442164cf5947b5",
-    "tarball": "https://registry.npmjs.org/openstack-wrapper/-/openstack-wrapper-1.4.6.tgz"
-  },
-  "maintainers": [
-    {
-      "name": "bannedinsweden",
-      "email": "npm@jasonrobinson.info"
-    },
-    {
-      "name": "bnewby",
-      "email": "brnewby602@gmail.com"
-    },
-    {
-      "name": "pchavan",
-      "email": "priyankachavan88@gmail.com"
-    },
-    {
-      "name": "vincent99",
-      "email": "vincent@rancher.com"
-    }
-  ],
-  "_npmOperationalInternal": {
-    "host": "packages-12-west.internal.npmjs.com",
-    "tmp": "tmp/openstack-wrapper-1.4.6.tgz_1487004875766_0.7516751354560256"
-  },
-  "directories": {},
-  "_resolved": "https://registry.npmjs.org/openstack-wrapper/-/openstack-wrapper-1.4.6.tgz"
+  }
 }
